[package]
name = "ssh-muxcontrol"
description = "A library which controls existing SSH sessions."
version = "0.1.0"
authors = ["Max Maisel <max.maisel@posteo.de>"]
license = "BSD-3-Clause"
edition = "2018"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "ssh"]
readme = "README.md"
repository = "https://github.com/mmmaisel/ssh-muxcontrol/"

[lib]
path = "src/lib.rs"

[[example]]
name = "hello"
crate-type = ["bin"]

[dependencies]
tokio = { version = ">=1.0", features=["io-util", "macros", "net"] }
tokio-pipe = ">=0.2.1"
bytes = ">=1.1.0"
sendfd = { version = ">=0.4.0", features=["tokio"] }

[dev-dependencies]
tokio = { version = ">=1.0", features=["rt", "time"] }
